[package]
name = "nyancache"
version = "0.1.0"
authors = ["The nyancache Authors <oss@nyantec.com>"]
edition = "2021"
license = "AGPL-3.0"

[dependencies]
base64 = "0.13"
diesel_derives = { version = "1.4", features = ["sqlite"] }
diesel = { version = "1.4", features = ["sqlite"] }
lazy_static = "1.4"
log = "0.4"
ring = "0.16"
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_sqlite_pool"] }
rocket = { version = "0.5.0-rc.1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.23"
strum_macros = "0.23"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.15", features = [ ] }
rust-s3 = { version = "0.28", default-features = false, features = [ "tokio-rustls-tls", "fail-on-err" ] }
cached = "0.26"
hyper = "0.14"
hyper-rustls = { version = "0.23", features = [ "http2" ] }
